--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jest-runner-tsc",
   "version": "0.0.0-development",
   "description": "A Jest Runner for the TypeScript compiler",
-  "main": "src",
+  "main": "dist",
   "engines": {
     "node": ">=6"
   },
