--- a/package.json
+++ b/package.json
@@ -39,5 +39,6 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/azz/jest-runner-tsc.git"
-  }
+  },
+  "files": ["/dist"]
 }
