More small package tweaks
- Run build script eith yarn in test - since this project relies on yarn
anyway
- version spec create-jest-runner. They haven't updated their changelog
yet so there is no telling if 0.5.0 would be breaking

Signed-off-by: Jeroen Claassens <support@fanva.xyz>

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "scripts": {
     "build": "babel src -d dist",
-    "test": "npm run-script build && jest",
+    "test": "yarns build && jest",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "peerDependencies": {
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "@babel/code-frame": "^7.0.0",
-    "create-jest-runner": "^0.4.1"
+    "create-jest-runner": "~0.4.1"
   },
   "repository": {
     "type": "git",
